updates email address

--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,7 @@
                 </section>
             </main>
             <footer>
-            <p>Contact me at <a href= "mailto:michael.mccutcheon1@yahaoo.com" >michael.mccutcheon1@yahoo.com</a></p>
+            <p>Contact me at <a href= "mailto:personal.email@email.com" >personal.email@email.com</a></p>
             </footer>
         </body>
 </html>
